# Firmware

./: .gitmodules  Makefile
.ci/: Jenkinsfile-SITL_tests  Jenkinsfile-compile
ROMFS/px4fmu_common/init.d/: rcS
ROMFS/px4fmu_common/init.d-posix/: 1017_iris_test  1040_standard_vtol  1077_vtol_test  rcS
boards/nxp/fmuk66-v3/: default.cmake
boards/nxp/fmurt1062-v1/src/: board_config.h  timer_config.c
boards/px4/sitl/: default.cmake
src/drivers/: drv_hrt.h
src/drivers/imu/l3gd20/: l3gd20.cpp
src/drivers/imu/mpu6000/: MPU6000.cpp  MPU6000.hpp
src/drivers/imu/mpu9250/: mpu9250.cpp  mpu9250.h
src/drivers/imxrt/: drv_input_capture.c  drv_io_timer.c  drv_io_timer.h  drv_pwm_servo.c
src/drivers/px4fmu/: fmu.cpp
src/drivers/safety_button/: SafetyButton.cpp
src/lib/: CMakeLists.txt
src/lib/FlightTasks/tasks/FlightTask/: FlightTask.hpp
src/lib/FlightTasks/tasks/ManualPositionSmoothVel/: FlightTaskManualPositionSmoothVel.cpp
src/lib/drivers/device/nuttx/: SPI.cpp
src/lib/rustlib/: CMakeLists.txt  rust_lib.cpp  rust_lib.h
src/modules/commander/: CMakeLists.txt  Commander.cpp  Commander.hpp  PreflightCheck.cpp
src/modules/logger/: logger.cpp
src/modules/mavlink/: mavlink_main.cpp
src/modules/navigator/: navigator.h  precland.cpp
src/modules/sensors/: sensors.cpp
src/modules/simulator/: CMakeLists.txt  simulator.cpp  simulator.h  simulator_mavlink.cpp  simulator_sidecar.cpp
src/modules/stargate/: CMakeLists.txt  Stargate.cpp  Stargate.h
src/modules/wind_estimator/: wind_estimator_main.cpp
src/systemcmds/tests/: test_microbench_uorb.cpp
